Closed Bug 1797983 Opened 3 years ago Closed 3 years ago

GDocs favicons no longer display in the tab strip

Categories

(Core :: DOM: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox106 --- unaffected
firefox107 --- unaffected
firefox108 --- disabled
firefox109 --- verified
firefox110 --- verified

People

(Reporter: mconley, Assigned: sefeng211)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [orb:m1], [wptsync upstream])

Attachments

(3 files)

Attached image Screenshot of problem

STR:

  1. Visit this test document
  2. Look at the tab strip

ER:

The GDocs favicon should appear.

AR:

The GDocs favicon does not appear. When pinned, the default favicon appears instead.

ni?ing sefeng per your mailing list post. :)

Flags: needinfo?(sefeng)

(I identified the regression range using mozregression)

Set release status flags based on info from the regressing bug 1785331

Looks like our sniffer failed to identify the ico file was an image. This is Nightly only, so I am changing the status.

We can set the status to disabled once 108 goes to Beta, but for now 108 is affected.

In today's Nightly I see favicons for gdocs but not pinned gdocs or gmail (but it does work for pinned gcal).

Assignee: nobody → sefeng
See Also: → 1798202
See Also: → 1798127

Our current code uses PeekStream to get the data and pass them
over to the sniffer, however it doesn't count the case where the
contents are compressed, so the sniffer would fail to determine
the type of contents.

This patches introduces a sub class of nsHTTPCompressConv which
allows when the sniffer type is ORB, we'll decompresses the first
chunk of the data before making an ORB decision.

Attachment #9301800 - Attachment description: WIP: Bug 1797983 - Make Sniffing with ORB decompresses contents before making an decision → Bug 1797983 - Make Sniffing with ORB decompresses contents before making an decision r=farre,valentin
Attachment #9301800 - Attachment description: Bug 1797983 - Make Sniffing with ORB decompresses contents before making an decision r=farre,valentin → Bug 1797983 - Make Sniffing with ORB decompresses contents before making a decision r=farre,valentin

It seems that these stuff aren't really needed because whatever
reaches to here either successfully synthesized requests or requests
with system principal (ie: the requests we manually created in
test_synthesized_response.js).

If those conditions are true, then these ORB checks will have no
effect, so we can remove them.

Depends on D161167

Blocks: 1798230
Blocks: 1798000
Blocks: 1798112
Blocks: 1798127
Whiteboard: [orb:m1]
Pushed by sefeng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5c12f99543e1 Make Sniffing with ORB decompresses contents before making a decision r=necko-reviewers,farre,valentin https://hg.mozilla.org/integration/autoland/rev/042e5a858d11 Remove ORB checks in InterceptedHttpChannel::OnStartRequest r=farre,smaug
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/36959 for changes under testing/web-platform/tests
Whiteboard: [orb:m1] → [orb:m1], [wptsync upstream]
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch

Can we get this work uplifted to 108?

I don't think we need to since ORB has been turned off in bug 1798227, so 108 doesn't have it?

Flags: needinfo?(sefeng)
Duplicate of this bug: 1798112
Duplicate of this bug: 1798127
Blocks: 1800658
Regressed by: 1802216
No longer regressed by: 1802216
Regressions: 1802216
Upstream PR was closed without merging

I was able to reproduce the issue on Win10 using FF build 108.0a1(20221028212211).
Verified as fixed on Win10/Ubuntu 20.04 using builds 109.0b1(20221212143511) and 110.0a1(20221213165020).

Regressions: 1852870
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: