Bug 1797983 - Make Sniffing with ORB decompresses contents before making a decision r=necko-reviewers,farre,valentin

Our current code uses PeekStream to get the data and pass them
over to the sniffer, however it doesn't count the case where the
contents are compressed, so the sniffer would fail to determine
the type of contents.

This patch we creates a child class of nsUnknowDecoder to utilize
its ability to hold off of calling the next OnStartRequest until
the contentType is determined, we also overrides DetermineContentType
method to make it focuses on decoding the compressed contents only.

Credit goes to farre since he pointed out this solution.

Differential Revision: https://phabricator.services.mozilla.com/D161167